--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,4 +39,9 @@ jobs:
       uses: scacap/action-surefire-report@v1
       with:
          github_token: ${{ secrets.GITHUB_TOKEN }}
-
+    - name: Upload Unit Test Results
+      if: ${{ always() }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: Unit Test Results (Java ${{ matrix.java }})
+        path: target/surefire-reports/*
