--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,13 +13,13 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
     strategy: 
         matrix:
+          os: [ubuntu-latest, windows-latest]
           java: [ 1.8, 11, 15 ]
         fail-fast: false
-    name: Java ${{ matrix.java }} sample
+    runs-on: ${{ matrix.os }}
+    name: Java ${{ matrix.java }} OS ${{ matrix.os }} sample
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
