--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,10 @@ jobs:
     steps:
     - name: Set Git Property
       run: |
-        git config --system core.longpaths true
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          git config --system core.longpaths true
+        fi
+      shell: bash
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
