--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,13 +3,7 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ * ]
-  pull_request:
-    branches: [ * ]
-  workflow_dispatch:
-    branches: [ * ]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
