--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,6 +42,7 @@ jobs:
       uses: scacap/action-surefire-report@v1
       with:
          github_token: ${{ secrets.GITHUB_TOKEN }}
+         check_name: Test Report ${{ matrix.java }} OS ${{ matrix.os }}
     - name: Upload Unit Test Results
       if: ${{ always() }}
       uses: actions/upload-artifact@v2
