--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -72,6 +72,13 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.8.0</version>
@@ -94,7 +101,7 @@
 			<artifactId>teetime</artifactId>
 			<version>3.0</version>
 		</dependency>
-		
+
 		<!-- Normally, we just use log4j2. Since kieker relies on slf4j, we need 
 			to add the bridge -->
 		<dependency>
