--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -52,7 +52,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>3.0.0-M3</version>
 				<executions>
 					<execution>
 						<goals>
