--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -79,6 +79,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.github.javaparser</groupId>
+			<artifactId>javaparser-symbol-solver-core</artifactId>
+			<version>3.20.2</version>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.8.0</version>
