--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -7,7 +7,7 @@
 	<name>peass-distribution</name>
 
 	<parent>
-		<groupId>de.peass</groupId>
+		<groupId>de.dagere.peass</groupId>
 		<artifactId>peass-parent</artifactId>
 		<version>0.1-SNAPSHOT</version>
 	</parent>
