--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -38,7 +38,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>de.peass.PeASSMain</mainClass>
+									<mainClass>de.dagere.peass.PeASSMain</mainClass>
 									<manifestEntries>
 										<Multi-Release>true</Multi-Release>
 									</manifestEntries>
