--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -63,6 +63,12 @@
 			<version>3.9.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>1.3.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
