--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -78,10 +78,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Do not update this dependency until Jenkins updates to 2.9.0 -->
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.9.0</version>
+			<version>2.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
