--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -150,13 +150,13 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.11.0</version>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-inline</artifactId>
-			<version>3.11.0</version>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 
