--- a/dependency/src/test/resources/example-snapshot-removal-pom/pom.xml
+++ b/dependency/src/test/resources/example-snapshot-removal-pom/pom.xml
@@ -39,7 +39,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jdk14</artifactId>
-      <version>${slf4j.version}</version>
+      <version>1.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
