--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -96,7 +96,7 @@
     <dependency>
       <groupId>de.dagere.kieker</groupId>
       <artifactId>kieker-source-instrumentation-library</artifactId>
-      <version>1.15.12</version>
+      <version>1.15.13-SNAPSHOT</version>
     </dependency>
 
     <dependency>
