--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>de.dagere.peass</groupId>
   <artifactId>peass-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>0.2.1</version>
   <name>PeASS - Parent</name>
   <description>Tool for Analysing the Performance Changes in a Project</description>
   <url>https://github.com/DaGeRe/peass/</url>
@@ -168,7 +167,7 @@
     <connection>scm:git:ssh://github.com:DaGeRe/peass.git</connection>
     <developerConnection>scm:git:git@github.com:DaGeRe/peass.git</developerConnection>
     <url>https://git@github.com:DaGeRe/peass.git</url>
-    <tag>HEAD</tag>
+    <tag>peass-parent-0.2.1</tag>
   </scm>
 
 
