--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -191,6 +191,14 @@
       <artifactId>groovy-astbuilder</artifactId>
       <version>3.0.11</version>
     </dependency>
+
+    <dependency>
+      <groupId>net.lingala.zip4j</groupId>
+      <artifactId>zip4j</artifactId>
+      <version>2.11.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <developers>
