--- a/.github/workflows/buildPeass.yml
+++ b/.github/workflows/buildPeass.yml
@@ -41,6 +41,8 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+    - name: Install git-crypt
+      run: sudo apt-get install git-crypt
     - name: Build Peass all (for version compatibility check)
       run: ./mvnw -B package -DskipTests -P buildStarter --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
       #      run: rm ~/.m2/repository/de/dagere/kopeme/ -r && ./mvnw -B package -DskipTests -P buildStarter --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
