--- a/.github/workflows/buildPeass.yml
+++ b/.github/workflows/buildPeass.yml
@@ -25,6 +25,12 @@ jobs:
         fi
       shell: bash
     - uses: actions/checkout@v2
+    - name: Install git-crypt
+      run: |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+           sudo apt-get install git-crypt
+        fi
+      shell: bash
     - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
@@ -41,8 +47,6 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    - name: Install git-crypt
-      run: sudo apt-get install git-crypt
     - name: Build Peass all (for version compatibility check)
       run: ./mvnw -B package -DskipTests -P buildStarter --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
       #      run: rm ~/.m2/repository/de/dagere/kopeme/ -r && ./mvnw -B package -DskipTests -P buildStarter --file pom.xml && ls ~/.m2/repository/ && ls ~/.m2/repository/de/dagere/kopeme/kopeme-core
