--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -35,7 +35,7 @@
               <minimizeJar>false</minimizeJar>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>de.dagere.peass.PeASSMain</mainClass>
+                  <mainClass>de.dagere.peass.PeassMain</mainClass>
                   <manifestEntries>
                     <Multi-Release>true</Multi-Release>
                   </manifestEntries>
