--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -69,7 +69,7 @@
     <dependency>
       <groupId>net.lingala.zip4j</groupId>
       <artifactId>zip4j</artifactId>
-      <version>2.11.2</version>
+      <version>${zip4j.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
