--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -195,7 +195,7 @@
     <dependency>
       <groupId>net.lingala.zip4j</groupId>
       <artifactId>zip4j</artifactId>
-      <version>2.11.2</version>
+      <version>${zip4j.version}</version>
       <scope>test</scope>
     </dependency>
 
