--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -114,7 +114,7 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
-      <version>2.18.0</version>
+      <version>2.19.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -151,7 +151,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
-      <version>5.9.0</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
 
