--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,8 @@
   </build>
 
   <properties>
-    <mockito.version>4.6.1</mockito.version>
+    <mockito.version>4.8.0</mockito.version>
+    <junit.version>5.9.1</junit.version>
     <kieker.version>1.15.1</kieker.version>
     <kopeme.version>1.1.13</kopeme.version>
     <zip4j.version>2.11.2</zip4j.version>
