--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>de.dagere.peass</groupId>
   <artifactId>peass-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.2.3-SNAPSHOT</version>
+  <version>0.3.0</version>
   <name>PeASS - Parent</name>
   <description>Tool for Analysing the Performance Changes in a Project</description>
   <url>https://github.com/DaGeRe/peass/</url>
@@ -169,7 +169,7 @@
     <connection>scm:git:ssh://github.com:DaGeRe/peass.git</connection>
     <developerConnection>scm:git:git@github.com:DaGeRe/peass.git</developerConnection>
     <url>https://git@github.com:DaGeRe/peass.git</url>
-    <tag>HEAD</tag>
+    <tag>peass-parent-0.3.0</tag>
   </scm>
 
 
