--- a/peass-jmh/pom.xml
+++ b/peass-jmh/pom.xml
@@ -8,7 +8,7 @@
   <groupId>de.dagere.peass</groupId>
   <artifactId>peass-jmh</artifactId>
   <name>peass-jmh</name>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.3.0-SNAPSHOT</version>
   <inceptionYear>2021</inceptionYear>
   <url>https://github.com/DaGeRe/peass/</url>
   <description>Enables the execution of JMH benchmarks with Peass regression test selection and root cause analysis</description>
@@ -85,12 +85,12 @@
     <dependency>
       <groupId>de.dagere.peass</groupId>
       <artifactId>dependency</artifactId>
-      <version>0.2.3-SNAPSHOT</version>
+      <version>0.3.0</version>
     </dependency>
     <dependency>
       <groupId>de.dagere.peass</groupId>
       <artifactId>dependency</artifactId>
-      <version>0.2.3-SNAPSHOT</version>
+      <version>0.3.0</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
