Update to groovy-astbuilder 4.0.6

--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -187,9 +187,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.codehaus.groovy</groupId>
+      <groupId>org.apache.groovy</groupId>
       <artifactId>groovy-astbuilder</artifactId>
-      <version>3.0.13</version>
+      <version>4.0.6</version>
     </dependency>
 
     <dependency>
