--- a/dependency/src/test/resources/executionIT/mockedStatic/pom.xml
+++ b/dependency/src/test/resources/executionIT/mockedStatic/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>de.dagere.kopeme</groupId>
       <artifactId>kopeme-junit5</artifactId>
-      <version>1.1.15-SNAPSHOT</version>
+      <version>1.1.14</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
