--- a/peass-jmh/pom.xml
+++ b/peass-jmh/pom.xml
@@ -85,12 +85,12 @@
     <dependency>
       <groupId>de.dagere.peass</groupId>
       <artifactId>dependency</artifactId>
-      <version>0.3.4-SNAPSHOT</version>
+      <version>0.3.4</version>
     </dependency>
     <dependency>
       <groupId>de.dagere.peass</groupId>
       <artifactId>dependency</artifactId>
-      <version>0.3.4-SNAPSHOT</version>
+      <version>0.3.4</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
