--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>de.dagere.peass</groupId>
     <artifactId>peass-parent</artifactId>
-    <version>0.3.5-SNAPSHOT</version>
+    <version>0.3.5</version>
   </parent>
 
   <build>
