--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>de.dagere.peass</groupId>
     <artifactId>peass-parent</artifactId>
-    <version>0.3.5-SNAPSHOT</version>
+    <version>0.3.5</version>
   </parent>
 
   <build>
