--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
       <groupId>de.dagere</groupId>
       <artifactId>nodeDiffDetector</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>0.0.1</version>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
