--- a/dependency/pom.xml
+++ b/dependency/pom.xml
@@ -62,11 +62,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>de.dagere</groupId>
-      <artifactId>nodeDiffDetector</artifactId>
-      <version>0.0.1</version>
-    </dependency>
-    <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest</artifactId>
       <version>2.2</version>
@@ -160,6 +155,13 @@
       <scope>test</scope>
     </dependency>
 
+	<!-- nodeDiffDetector and requitur provide very basic functionalities with limited dependencies; to avoid
+	     getting their old dependencies (especially log4j), these should be low in the dependency order -->
+    <dependency>
+      <groupId>de.dagere</groupId>
+      <artifactId>nodeDiffDetector</artifactId>
+      <version>0.0.1</version>
+    </dependency>
     <dependency>
       <groupId>de.dagere</groupId>
       <artifactId>requitur</artifactId>
