--- a/dependency/src/test/resources/gradle/androidlib.gradle
+++ b/dependency/src/test/resources/gradle/androidlib.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath "com.android.tools.build:gradle:7.4.2"
     }
 }
 
@@ -21,6 +21,6 @@ android {
 }
 
 dependencies {
-    testCompile "junit:junit:4.13"
-    testCompile "org.robolectric:robolectric:4.8"
+    testImplementation "junit:junit:4.13"
+    testImplementation "org.robolectric:robolectric:4.8"
 }
