--- a/peass-jmh/pom.xml
+++ b/peass-jmh/pom.xml
@@ -123,6 +123,18 @@
       <version>4.11.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+      <version>1.14.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy-agent</artifactId>
+      <version>1.14.11</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <developers>
