--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -61,6 +61,12 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>io.github.terahidro2003</groupId>
+      <artifactId>sjsw</artifactId>
+      <version>0.1.1</version>
+    </dependency>
+
     <!-- For execution, it is assumed that the kieker aspectJ-jar is in the local .m2 directory; no need for inclusion in jar, therefore scope runtime -->
     <dependency>
       <groupId>net.kieker-monitoring</groupId>
