--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
     <mockito.version>5.15.2</mockito.version>
     <junit.version>5.11.4</junit.version>
     <kieker.version>2.0.2</kieker.version>
-    <kopeme.version>1.4.1</kopeme.version>
+    <kopeme.version>1.4.2-SNAPSHOT</kopeme.version>
     <zip4j.version>2.11.5</zip4j.version>
     <project.organization.name>DaGeRe</project.organization.name>
     <license.licenseName>agpl_v3</license.licenseName>
